--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,4 +129,7 @@
   body {
     @apply bg-background text-foreground;
   }
+  .bg-liquid-glass {
+    @apply border-primary/10 border-1 backdrop-blur bg-gradient-to-br from-primary/10 via-transparent to-primary/15;
+  }
 }
